# ocr_service

./: .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.sh
.claude/: settings.local.json
core/: ocr_engine.py
docs/superpowers/plans/: 2026-04-24-request-id-logging.md
docs/superpowers/specs/: 2026-04-24-request-id-logging-design.md
ocr_service/: __init__.py  config.py  server.py
ocr_service/api/: routes.py  schemas.py
ocr_service/core/: image_matcher.py  image_preprocessor.py  ocr_engine.py
ocr_service/models/: ocr_result.py
ocr_service/utils/: image_utils.py  request_context.py
